fix z-index problem for composition photos.

--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ body {
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     border-radius: 2px;
     position: absolute;
-    z-index: 0;
+    z-index: 1;
     transition: all 0.2s;
     outline-offset: 2rem; }
     .composition__photo--p1 {
@@ -627,6 +627,9 @@ body {
     @media (max-width: 56.25em) {
       .row:not(:last-child) {
         margin-bottom: 6rem; } }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50rem; } }
   .row::after {
     content: '';
     display: table;
